Signature pad changes